<resources>
    <string name="app_name">Calculadora</string>

    <string name="action_settings">Settings</string>

    <string name="textViewOperadorUno">Operador 1:</string>
    <string name="editTextUno"></string>
    <string name="textViewOperadorDos">Operador 2:</string>
    <string name="editTextDos"></string>

    <string name="textViewLabelResultado">Resultado:</string>
    <string name="textViewResultado"></string>

</resources>
