<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/textViewOperadorUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewUno" />

    <EditText
        android:id="@+id/editTextUno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editTextUno"
        android:layout_below="@+id/textViewUno"
        android:inputType="number" />

    <TextView android:text="@string/textViewOperadorDos"
        android:id="@+id/textViewDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUno"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/editTextDos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editTextDos"
        android:layout_below="@+id/textViewDos"
        android:inputType="number" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:id="@+id/buttonMas"
        android:layout_below="@+id/editTextDos"
        android:onClick="accion"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/buttonMenos"
        android:layout_below="@+id/editTextDos"
        android:layout_toEndOf="@+id/buttonMas"
        android:onClick="accion"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="x"
        android:id="@+id/buttonMultiplicacion"
        android:layout_below="@+id/editTextDos"
        android:layout_toEndOf="@+id/buttonMenos"
        android:onClick="accion"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        android:id="@+id/buttonDivision"
        android:layout_below="@+id/editTextDos"
        android:layout_toEndOf="@+id/buttonMultiplicacion"
        android:onClick="accion"/>

    <TextView
        android:text="@string/textViewLabelResultado"
        android:id="@+id/textViewLabelResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMas"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/textViewResultado"
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMas"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/textViewLabelResultado"/>


</RelativeLayout>
